# vocoder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aug.py  dockerfile  mel_cvt.py  pyproject.toml  test.py  train.py  train_hifigan.py  train_refine.py  train_vae.py  train_vqvae.py
.hydra/: config.yaml  hydra.yaml
fish_vocoder/: eval.py  test.py  train.py
fish_vocoder/configs/: hifigan.yaml  refine.yaml  refinegan_aug.yaml  train.yaml  vae.yaml  vae_vocos.yaml  vqvae.yaml
fish_vocoder/configs/callbacks/: default.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml
fish_vocoder/configs/data/: vocoder.yaml
fish_vocoder/configs/data/dataset/: vocoder-train.yaml
fish_vocoder/configs/hydra/: default.yaml
fish_vocoder/configs/logger/: wandb.yaml
fish_vocoder/configs/model/: bigvgan-base.yaml  gan.yaml  hifigan-opt.yaml  hifigan.yaml  vae.yaml  vqvae.yaml
fish_vocoder/configs/model/generator/: convnext-bigvgan-base.yaml  convnext-bigvgan-big.yaml  convnext-bigvgan.yaml  convnext-hifigan-base.yaml  convnext-hifigan-big.yaml  convnext-hifigan-snake.yaml  convnext-hifigan-vae.yaml  convnext-hifigan.yaml  firefly-gan-base.yaml  hifigan-opt.yaml  hifigan-vae.yaml  hifigan.yaml  vocos-huge.yaml  vocos-large.yaml  vocos-small-vae.yaml  vocos-small.yaml  vocos.yaml
fish_vocoder/configs/model/resolution/: 24000_2048_3072.yaml  (+2 more)
fish_vocoder/configs/paths/: default.yaml
fish_vocoder/configs/trainer/: default.yaml
fish_vocoder/data/datamodules/: naive.py
fish_vocoder/data/datasets/: mix.py  refine.py  repeat.py  vae.py  vocoder.py
fish_vocoder/data/transforms/: crop.py  discontinuous.py  hq_pitch_shift.py  load.py  log_mel_spectrogram.py  loudness.py  pad.py  pad_crop.py  spectrogram.py
fish_vocoder/models/: gan.py  hifigan.py  vae.py  vocoder.py
fish_vocoder/modules/discriminators/: mpd.py  mrd.py
fish_vocoder/modules/encoders/: convnext.py  hubert.py  mms.py  posterior_encoder.py
fish_vocoder/modules/generators/: bigvgan.py  hifigan.py  refinegan.py  unify.py  vocos.py
fish_vocoder/modules/losses/: stft.py
fish_vocoder/schedulers/: warmup_cosine.py
fish_vocoder/utils/: __init__.py  file.py  grad_norm.py  instantiators.py  logger.py  logging_utils.py  mask.py  rich_utils.py  utils.py
scripts/: convert_diffsinger_mel.py  random_copy.py  test_convnext_hifigan.sh  test_convnext_hifigan_big.sh  test_firefly_gan.sh  test_hifigan.sh  test_vocos.sh  test_vocos_huge.sh  train_bigvgan.sh  train_bigvgan_base.sh  train_convnext_bigvgan_base.sh  train_convnext_hifigan.sh  train_convnext_hifigan_base.sh  train_convnext_hifigan_more_supervised.sh  train_convnext_hifigan_snake.sh  train_convnext_hifigan_vae.sh  train_hifigan.sh  train_vocos.sh  train_vocos_huge.sh  train_vocos_huge_full.sh  vocos_gen.py
(+2 files in other folders)
